--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>Nebula</finalName>
+		<finalName>Spider42</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
