--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
 		<jsoup.version>1.11.3</jsoup.version>
 		<fastjson.version>1.2.47</fastjson.version>
+		<commonmark.version>0.12.1</commonmark.version>
 	</properties>
 
 	<dependencies>
@@ -61,6 +62,12 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.atlassian.commonmark</groupId>
+			<artifactId>commonmark</artifactId>
+			<version>${commonmark.version}</version>
 		</dependency>
 
 	</dependencies>
