--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,19 @@
 			<artifactId>httpclient</artifactId>
 		</dependency>
 
+		<!-- markdown解析 -->
 		<dependency>
 			<groupId>com.atlassian.commonmark</groupId>
 			<artifactId>commonmark</artifactId>
 			<version>${commonmark.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>4.0.7</version>
+		</dependency>
+
 
 	</dependencies>
 
