--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<jsoup.version>1.11.3</jsoup.version>
 		<fastjson.version>1.2.47</fastjson.version>
 		<commonmark.version>0.12.1</commonmark.version>
+		<jfoenix.version>8.0.8</jfoenix.version>
 	</properties>
 
 	<dependencies>
@@ -40,6 +41,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>${jfoenix.version}</version>
 		</dependency>
 
 		<dependency>
